# slurm

./: BUILD.NOTES  configure  configure.ac  slurm.spec
auxdir/: Makefile.in
contribs/: Makefile.am  Makefile.in  README
contribs/pam_mount_ns_adopt/: Makefile.am  Makefile.in  pam_mount_ns_adopt.c
slurm/: slurm.h.in
src/api/: config_info.c
src/common/: read_config.c  read_config.h  slurm_xlator.h
src/plugins/task/: Makefile.am  Makefile.in
src/plugins/task/mount_isolation/: Makefile.am  Makefile.in  task_mount_isolation.c
